upgrade alpine+postfix, also add a possibility restrict recepients

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,4 +1,5 @@
 [supervisord]
+user = root
 nodaemon = true
 logfile = /dev/null
 logfile_maxbytes = 0
@@ -12,7 +13,7 @@ stderr_logfile_maxbytes = 0
 stdout_logfile_maxbytes = 0
 
 [program:postfix]
-command = /usr/local/bin/dfg.sh /var/spool/postfix/pid/master.pid /usr/sbin/postfix -c /etc/postfix start
+command = postfix -c /etc/postfix start-fg
 startsecs = 5
 
 [eventlistener:supervisord-watchdog]
@@ -20,4 +21,3 @@ command = /usr/local/bin/supervisord-watchdog.py
 events = PROCESS_STATE_FATAL
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
-
