Add support for timestamps in log

--- a/conf/rsyslog.conf
+++ b/conf/rsyslog.conf
@@ -3,5 +3,6 @@
 #
 $ModLoad imuxsock
 $template noTimestampFormat,"%syslogtag%%msg%\n"
-$ActionFileDefaultTemplate noTimestampFormat
+$template timestampFormat,"%$year%-%$month%-%$day% %timegenerated:12:19:date-rfc3339% %syslogtag%%msg%\n"
+$ActionFileDefaultTemplate $LOG_FORMAT
 *.*;auth,authpriv.none /dev/stdout
