upgrade postfix to 3.4.x, and tweak rsyslog log format

--- a/conf/rsyslog.conf
+++ b/conf/rsyslog.conf
@@ -2,6 +2,6 @@
 # redirect /var/log/syslog to stdout
 #
 $ModLoad imuxsock
-$template noTimestampFormat,"%syslogtag%%msg%\n"
-$ActionFileDefaultTemplate noTimestampFormat
+$template supervisordFormat,"%timegenerated:1:10:date-rfc3339% %timegenerated:12:23:date-rfc3339% %syslogseverity-text:::uppercase% %syslogtag%%msg%\n"
+$ActionFileDefaultTemplate supervisordFormat
 *.*;auth,authpriv.none /dev/stdout
